--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <!-- SEO Title -->
+    <title>Umar Dabhoiwala | Software Engineer</title>
+
+    <!-- Meta Description - Describes the content of your page -->
+    <meta name="description" content="Umar Dabhoiwala's personal website showcasing his portfolio, projects, and skills as a Software Engineer." />
+
+    <!-- Canonical - This helps avoid duplicate content issues -->
+    <link rel="canonical" href="https://umardabhoiwala.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/rocket.svg" />
+
+    <!-- Responsive Meta Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Umar Dabhoiwala</title>
+
+    <!-- Specify the base URL for all relative URLs within the page -->
+    <base href="https://umardabhoiwala.com" />
+
+    <!-- Optional: Social Media Preview (Open Graph for Facebook and LinkedIn) -->
+    <meta property="og:title" content="Umar Dabhoiwala | Software Engineer" />
+    <meta property="og:description" content="Umar Dabhoiwala's personal website showcasing his portfolio, projects, and skills as a Software Engineer." />
+    <meta property="og:image" content="https://umardabhoiwala.com/rocket.png" />
+    <meta property="og:url" content="https://umardabhoiwala.com" />
+
+    <!-- Optional: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Umar Dabhoiwala | Software Engineer">
+    <meta name="twitter:description" content="Umar Dabhoiwala's personal website showcasing his portfolio, projects, and skills as a Software Engineer.">
+    <meta name="twitter:image" content="https://umardabhoiwala.com/rocket.png">
+
   </head>
   <body>
     <div id="root"></div>
