--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/rocket.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Umar Dabhoiwala | Software Engineer</title>
+    <title>Umar Dabhoiwala</title>
 
     <!-- <base href="https://umardabhoiwala.com" /> -->
 
